project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: ghcr.io/pekk4/devopswithkubernetes-todo_app:2.2
          imagePullPolicy: Always
          volumeMounts:
            - name: todo-storage
              mountPath: /logs
            - name: todo-storage
              mountPath: /static
      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-app-pvc
      nodeSelector:
        kubernetes.io/hostname: k3d-k3s-default-agent-0
